# cpp-build-env

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-insp  Dockerfile-new  LICENSE  README.md  ToDo  build-ctx-test.txt  build-image.sh  build.sh  push-image.sh  test-image.sh  use-podman
.github/workflows/: build-and-publish.yml  docker-build.yml  release.yml
hooks/: build  post_push  pre_build  pre_push  pre_test  push  test
pictures/: picture.pptx
test/: CMakeLists.txt  main.cpp  test-build.sh  test.sh
test/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  test_app
tt-repo/: .dockerignore  Dockerfile  README.md  test-docker.sh
tt-repo/.github/workflows/: docker-build.yml
tt-repo/test-project/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  main.cpp
